[build-system]
requires = ["setuptools>=61.0", "wheel", "cmake", "swig<4.3", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "medpython"
version = "1.1.0"
description = "Medial EarlySign Python"
readme = "README.md"
license = {text = "MIT" }
requires-python = ">=3.8"
authors = [
  { name="Alon Lanyado" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Programming Language :: C",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas", 
    "plotly",
    "medpython-etl>1.0.0",
]
keywords = [ "EMR", "EHR", "machine-learning", "medicine", "time-series", "clinical", "healthcare", "clinical-data", "medical", "clinical-data-warehouse" ]

[project.urls]
Homepage = "https://github.com/Medial-EarlySign/medpython"
Documentation = "https://medial-earlysign.github.io/MR_Wiki/"
Changelog = "https://github.com/Medial-EarlySign/medpython/discussions/categories/announcements"

[tool.setuptools.packages.find]
where = ["src"]
# copy to src ETL_Infra and AlgoMarker with the shared object
